Use List.of() ao invés de Collectors.toList()